[gd_scene load_steps=4 format=3 uid="uid://qen7j2txwcrt"]

[ext_resource type="Theme" uid="uid://mbsg4xqnedxi" path="res://theme/FlatUI4/kenneyUI-red.tres" id="1_0wgyi"]
[ext_resource type="Script" path="res://main_menu_screen/panel_save.gd" id="2_tu0yn"]
[ext_resource type="Theme" uid="uid://cjrfgel6g1bec" path="res://theme/theme_label_title.tres" id="3_3f16a"]

[node name="panel_save" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(500, 400)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0wgyi")
script = ExtResource("2_tu0yn")
focus_on = NodePath("PanelContainer/VBoxContainer/btn_new_save")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_3f16a")
text = "Save Game"
horizontal_alignment = 1

[node name="btn_close" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close
"

[node name="btn_new_save" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "New Save"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="save_slot_Container" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="button_down" from="PanelContainer/VBoxContainer/HBoxContainer/btn_close" to="." method="_on_btn_close_button_down"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/btn_new_save" to="." method="_on_btn_new_save_button_down"]
